@@ -31,3 +31,4 @@ nx = _TypeNamespace()
 from numpy import inf, infty, Infinity
 from numpy.random import rand, randn
 infinity = Infinity
+from numpy import all, isnan, any
