@@ -5,10 +5,9 @@ if which[0] == "numarray":
 elif which[0] == "numeric":
     from FFT import *
 elif which[0] == "numpy":
-    from numpy.dft import *
     try:
-        from numpy.dft.old import *
+        from numpy.oldnumeric.fft import *
     except ImportError:
-        pass
+        from numpy.dft.old import * 
 else:
     raise RuntimeError("invalid numerix selector")
