@@ -5,7 +5,10 @@ if which[0] == "numarray":
 elif which[0] == "numeric":
     from MLab import *
 elif which[0] == "numpy":
-    from numpy.lib.mlab import *
+    try:
+       from numpy.oldnumeric.mlab import *
+    except ImportError:
+       from numpy.lib.mlab import *
 else:
     raise RuntimeError("invalid numerix selector")
 
