@@ -1,3 +1,5 @@
+2006-08-05 Re-organized imports in numerix for numpy 1.0b2 -- TEO
+
 2006-08-04 Added draw_markers to PDF backend. - JKS
 
 2006-08-01 Fixed a bug in postscript's rendering of dashed lines - DSD
